--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>CanionLabs</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class="main">
